--- a/style.css
+++ b/style.css
@@ -1,1 +1,273 @@
-@import url('https://fonts.googleapis.com/css2?family=Raleway&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;600;700&display=swap');
+
+html
+{
+    font-size: 62.5%; /* Ré-équilibrage du Rem face au Pixel pour des calculs simples */
+}
+
+#bloc_page
+{
+    font-family:'Raleway', sans-serif;  
+    font-size: 16px; /* Pour les navigateurs qui ne supportent pas le Rem */
+    font-size: 1.6rem; /* Pour les navigateurs « Responsive » */
+    color: #000;
+    margin-left: 4.5rem;   
+    margin-right: 4.5rem;     
+}
+
+/* DEBUT HEADER */ 
+
+header 
+{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+header img 
+{
+    padding-top: 4.7rem;
+}
+h1 
+{
+    font-size: 2.2rem;
+}
+
+/* debut menu nav */
+
+.menu 
+{
+    display: flex;
+    flex-basis: 80%;
+    align-items: center;
+    justify-content: flex-end;
+    padding-top: 3.3rem;
+}
+.menu ul 
+{
+    display: flex;
+    list-style: none;     
+}
+.menu a
+{   
+     text-decoration: none;
+     color:#000; 
+     padding: 2.5rem;
+     padding-top: 5.6rem;
+ }  
+.inscrip a
+{
+    color: #0065fc;
+    font-weight: bold;   
+} 
+.menu ul a:active 
+{
+    color: #0065fc;
+    border-top: 0.2rem solid #0065fc;
+}
+/* fin menu nav */
+
+/* FIN HEADER */
+
+/* DEBUT RECHERCHE */
+
+.recherche 
+{
+    display: flex;
+}
+.recherche button 
+{ 
+    font-family:'Raleway', sans-serif;
+    font-weight: bold;
+    background-color: #0065fc;
+    color: white;
+    font-size: 1.8rem;
+    padding: 1.5rem;
+    border: 0;
+    border-radius:0 1.5rem 1.5rem 0;
+    margin-left: -0.2rem;
+}
+.recherche input 
+{
+    font-family:'Raleway', sans-serif;
+    border: 0.1rem solid #f2f2f2;
+    font-size: 1.8rem;
+    font-weight:bold;
+    padding-left: 1.5rem;   
+}
+.recherche i 
+{
+    padding: 1.8rem;
+    background-color: #f2f2f2;
+    border-radius:1.5rem 0 0 1.5rem ;
+}
+/* FIN RECHERCHE */
+
+/* DEBUT FILTRES */
+
+.filtre
+{
+    display:inline-flex; 
+    width:auto;
+    height: 5rem;  
+    align-items: center;
+    border:  0.2rem solid #dfdfdf;
+    border-radius:5rem;
+    margin-left: 2rem;    
+}
+.titrefiltre
+{
+    display: inline-flex;
+    margin: 1.2rem;  
+}
+.textefiltre
+{
+    font-size: 1.8rem;
+    font-weight: bold;
+    margin-left: 1.2rem;
+    margin-right: 2rem;    
+}
+.iconefiltre
+{
+    font-size: 1.9rem;
+    background-color: #DEEBFF;
+    color: #0065fc;
+    border-radius: 100%;
+    width: 5.2rem;
+    height: 5.2rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-left: -0.5rem;
+}
+.filtre :hover
+{
+    color:#0065fc;
+    font-style:oblique;
+}
+/* FIN FILTRES */
+
+/* DEBUT INFO */
+
+.info
+{
+    display:flex;
+    align-items: center;
+    margin-top:1.3rem ;
+}
+.info i
+{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: #0065fc;
+    border: 0.2rem solid #f2f2f2;
+    border-radius: 100%;
+    background-color: white;
+    width: 2.2rem;
+    height: 2.2rem;
+    margin-right: 1rem; 
+    font-size:1.1rem ; 
+}
+/* FIN INFO */
+
+section 
+{
+    display: flex;
+}
+
+/* DEBUT HEBERGEMENT */
+
+.hebergement
+{
+    background-color:#f2f2f2;
+    width: 63%;
+    padding: 2.3rem;
+    border-radius: 2rem ;
+}
+h2
+{
+    font-size: 2.2rem;
+    margin-left: 2rem;
+}
+.article
+{
+    display:flex;
+    flex-wrap: wrap;   
+}
+
+.hebergement article
+{
+    display: flex;
+    width: 23.5rem;
+    height: 20rem;
+    background-color: white;
+    margin: 1.5rem;
+    padding: 0.6rem;
+    padding-bottom: 1rem;
+    border-radius: 2.5rem;
+    line-height: 0.6rem;
+    box-shadow: 0.2rem 0.2rem 2rem lightgray;
+}
+.hebergement article a
+{
+    display: block;
+    text-decoration: none;
+    overflow: hidden;
+    border-radius: 2rem 2rem 0 0;   
+}
+.hebergement article img
+{
+    width: 106%;
+    height: 61%;
+    object-fit:cover;
+    margin-left: -1rem;
+}
+/* chercher alternative moins complexe pour rogner l'image */
+
+.hebergement p 
+{
+    margin-left:0;
+}
+
+.bleu
+{
+    color:#0065fc;
+    font-size:1.2rem;
+    letter-spacing:-0.14rem;
+}
+.gris
+{
+    color:#f2f2f2;
+    font-size:1.2rem;
+}
+.textehebergement
+{
+    margin-left: 1rem;
+    font-size: 1.4rem;
+}
+
+/* FIN HEBERGEMENT *
+
+/* DEBUT POPULAIRE */
+
+
+
+.populaire
+{
+    background-color:#f2f2f2;
+    width: 28.7%;
+    padding: 2rem;
+    border-radius: 2rem ;
+    margin-left: 3.8rem;
+}
+.titrepopulaire
+{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.titrepopulaire i 
+{
+    font-size: 2.3rem;
+    margin-right: 2rem;
+}
