--- a/style.css
+++ b/style.css
@@ -5,18 +5,36 @@ html
     font-size: 62.5%; /* Ré-équilibrage du Rem face au Pixel pour des calculs simples */
 }
 
-#bloc_page
+body
 {
     font-family:'Raleway', sans-serif;  
     font-size: 16px; /* Pour les navigateurs qui ne supportent pas le Rem */
     font-size: 1.6rem; /* Pour les navigateurs « Responsive » */
     color: #000;
-    margin-left: 4.5rem;   
-    margin-right: 4.5rem;     
+    margin-left: 4rem;
+    margin-right: 4rem;
+}
+/* GENERAL */
+h1, h2 
+{
+    font-size: 2.2rem;   
+}
+h2 
+{
+    margin-left: 2rem;
+    margin-bottom: 0.9rem;
+}
+h3 
+{
+    font-size: 1.6rem;
+}
+a 
+{
+    text-decoration: none;
+    color: #000;
 }
 
 /* DEBUT HEADER */ 
-
 header 
 {
     display: flex;
@@ -25,58 +43,55 @@ header
 }
 header img 
 {
-    padding-top: 4.7rem;
-}
-h1 
-{
-    font-size: 2.2rem;
+    padding-top: 3.5rem;
 }
 
 /* debut menu nav */
-
 .menu 
 {
-    display: flex;
-    flex-basis: 80%;
-    align-items: center;
-    justify-content: flex-end;
-    padding-top: 3.3rem;
+    display:flex;
+    flex-wrap: wrap-reverse;
 }
-.menu ul 
+.menu ul
 {
-    display: flex;
-    list-style: none;     
+    display: inline-flex; 
+    list-style: none;
+    margin-top: 4rem;
+    margin-right: 14rem;       
 }
 .menu a
 {   
-     text-decoration: none;
-     color:#000; 
-     padding: 2.5rem;
-     padding-top: 5.6rem;
- }  
-.inscrip a
+    padding: 3.2rem; 
+    padding-top: 4.4rem;  
+}  
+.inscription a
 {
+    position: absolute;
+    top: 0.3rem;
+    right: 4.4rem;
     color: #0065fc;
-    font-weight: bold;   
+    font-weight: bold;        
 } 
 .menu ul a:active 
 {
     color: #0065fc;
     border-top: 0.2rem solid #0065fc;
 }
+.titre-principal
+{
+    flex-basis: 100%;
+}
 /* fin menu nav */
-
 /* FIN HEADER */
 
 /* DEBUT RECHERCHE */
-
 .recherche 
 {
     display: flex;
 }
 .recherche button 
 { 
-    font-family:'Raleway', sans-serif;
+    font-family:inherit;
     font-weight: bold;
     background-color: #0065fc;
     color: white;
@@ -88,7 +103,7 @@ h1
 }
 .recherche input 
 {
-    font-family:'Raleway', sans-serif;
+    font-family:inherit;
     border: 0.1rem solid #f2f2f2;
     font-size: 1.8rem;
     font-weight:bold;
@@ -103,40 +118,39 @@ h1
 /* FIN RECHERCHE */
 
 /* DEBUT FILTRES */
-
 .filtre
 {
     display:inline-flex; 
-    width:auto;
-    height: 5rem;  
+    height: 4.8rem;  
     align-items: center;
     border:  0.2rem solid #dfdfdf;
     border-radius:5rem;
-    margin-left: 2rem;    
+    margin-left: 2rem;
+    margin-bottom: 1.5rem;    
 }
-.titrefiltre
+.titre-filtre
 {
     display: inline-flex;
     margin: 1.2rem;  
 }
-.textefiltre
+.texte-filtre
 {
     font-size: 1.8rem;
     font-weight: bold;
     margin-left: 1.2rem;
     margin-right: 2rem;    
 }
-.iconefiltre
+.icone-filtre
 {
-    font-size: 1.9rem;
-    background-color: #DEEBFF;
-    color: #0065fc;
-    border-radius: 100%;
-    width: 5.2rem;
-    height: 5.2rem;
     display: flex;
     align-items: center;
     justify-content: center;
+    font-size: 1.9rem;
+    background-color: #DEEBFF;
+    color: #0065fc;
+    width: 5.2rem;
+    height: 5.2rem;
+    border-radius: 100%;
     margin-left: -0.5rem;
 }
 .filtre :hover
@@ -147,7 +161,6 @@ h1
 /* FIN FILTRES */
 
 /* DEBUT INFO */
-
 .info
 {
     display:flex;
@@ -158,11 +171,10 @@ h1
 {
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: center; 
     color: #0065fc;
     border: 0.2rem solid #f2f2f2;
     border-radius: 100%;
-    background-color: white;
     width: 2.2rem;
     height: 2.2rem;
     margin-right: 1rem; 
@@ -170,40 +182,30 @@ h1
 }
 /* FIN INFO */
 
-section 
+.section-hebergement-activite
 {
     display: flex;
 }
-
 /* DEBUT HEBERGEMENT */
-
 .hebergement
 {
     background-color:#f2f2f2;
     width: 63%;
     padding: 2.3rem;
+    padding-bottom: 3rem;
     border-radius: 2rem ;
-}
-h2
-{
-    font-size: 2.2rem;
-    margin-left: 2rem;
-}
-p , h3
-{
-    color: #000;
 }
 .article
 {
     display:flex;
-    flex-wrap: wrap;   
+    flex-wrap: wrap;
+    justify-content: space-evenly; 
 }
-
 .hebergement article
 {
     display: flex;
     width: 23.5rem;
-    height: 20rem;
+    height: 18.4rem;
     background-color: white;
     margin: 1.5rem;
     padding: 0.6rem;
@@ -212,66 +214,176 @@ p , h3
     line-height: 0.6rem;
     box-shadow: 0.2rem 0.2rem 2rem lightgray;
 }
-.hebergement article a
+.hebergement a
 {
-    display: block;
-    text-decoration: none;
     overflow: hidden;
     border-radius: 2rem 2rem 0 0;   
 }
-.hebergement article img
+.hebergement img
 {
     width: 106%;
     height: 61%;
     object-fit:cover;
     margin-left: -1rem;
 }
-/* chercher alternative moins complexe pour rogner l'image */
-
-.hebergement p 
-{
-    margin-left:0;
-}
-
-.bleu
+.etoile-bleu
 {
     color:#0065fc;
     font-size:1.2rem;
     letter-spacing:-0.14rem;
 }
-.gris
+.etoile-gris
 {
     color:#f2f2f2;
     font-size:1.2rem;
 }
-.textehebergement
+.texte-hebergement
 {
-    margin-left: 1rem;
+    margin:1.3rem 1rem;
     font-size: 1.4rem;
 }
-
 /* FIN HEBERGEMENT *
 
 /* DEBUT POPULAIRE */
-
-
-
 .populaire
 {
+    display:flex;
+    flex-direction: column;
     background-color:#f2f2f2;
     width: 28.7%;
+    min-width: 37rem;
     padding: 2rem;
     border-radius: 2rem ;
     margin-left: 3.8rem;
 }
-.titrepopulaire
+.titre-populaire
 {
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
-.titrepopulaire i 
+.titre-populaire i 
 {
     font-size: 2.3rem;
     margin-right: 2rem;
 }
+.populaire article
+{
+    display:flex;
+    width: 33.4rem;
+    height: 13.5rem;
+    background-color: white;
+    margin: 1.5rem;
+    padding: 0.5rem;
+    border-radius: 2rem;
+    box-shadow: 0.2rem 0.2rem 2rem lightgray;    
+}
+.image-populaire 
+{
+    overflow: hidden;
+    width: 13rem;
+    height:13.5rem ;
+    border-radius:  1.5rem 0  0 1.5rem;
+    flex-shrink: 0;
+}
+.populaire img
+{ 
+    width: 108%; 
+    height: 106%; 
+    margin-left:-0.6rem;
+    margin-top: -0.5rem;
+    object-fit:cover;    
+}
+.texte-populaire 
+{
+    display:flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    padding-left: 2rem;
+    padding-right: 2rem;
+}
+.populaire h3 
+{
+    margin-top: 0.8rem;
+}
+.populaire p
+{
+    font-size: 1.4rem;
+    margin-top:-1.1rem;   
+}
+.texte-populaire i 
+{
+    margin-top: 3.3rem;
+    font-size:1.1rem;
+    letter-spacing: 0;
+}
+/* FIN POPULAIRE */
+
+/* DEBUT ACTIVITES */
+.section-activites
+{
+    display: block;
+}
+.Activites 
+{
+    display: flex;
+    flex-flow: row wrap; 
+    justify-content: space-between;       
+}
+.section-activites img
+{
+    width:30rem;
+    object-fit: cover;
+    border-radius: 2rem;    
+    margin:  1rem;
+}
+.titre-activite 
+{
+    background-color: white;
+    padding: 0.3rem 0 0.2rem 1.8rem;
+    transform: translate(0, -6rem);
+    border-radius: 0 0 2rem 2rem; 
+    box-shadow: 0.2rem 0.4rem 0.8rem rgb(235, 233, 233); 
+    margin:-0.7rem 1rem -2.5rem 1rem;
+}
+.img-1, .img-4 
+{
+   height: 43.5rem;
+}
+.img-2
+{
+    height: 23rem;  
+}
+.img-3 
+{
+   height: 15.5rem;
+}
+.img-5 
+{
+    height: 18.5rem;  
+}
+.img-6 
+{
+    height: 19.8rem; 
+}
+/* FIN ACTIVITES */
+
+/* DEBUT FOOTER */
+footer 
+{
+    display: flex;
+    justify-content: space-between;
+    background-color: #f2f2f2;
+    margin: 2.6rem -4rem 0 -4rem;
+    padding: 2.8rem 6rem;
+}
+footer div 
+{
+    width: 32%;
+}
+footer p 
+{
+    line-height: 1.5rem;
+}
+/* FIN FOOTER */
+
