--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@ a
 /* DEBUT HEADER */ 
 header 
 {
-    margin: 3.3rem 5.1rem 0 5.1rem ;
+    margin: 0 5.1rem 0 5.1rem ;
     display: grid;
     grid-template-areas:
     "img menu inscription"
@@ -44,25 +44,19 @@ header
 }
 header img 
 {
-    padding-top: 1.2rem; 
+    padding-top: 4.4rem; 
     grid-area: img;
 }
-
 /* debut menu nav */
 .menu 
-{
+{ 
     grid-area: menu;
-    text-align: end;
-}
-.menu ul
-{
-    display: inline-flex; 
-    list-style: none;
-    margin-right: 0.6rem;        
+    display: inline-flex;
+    justify-content: flex-end;
 }
 .menu a
 {   
-    padding:4.6rem 3.4rem; 
+    padding:4.6rem 3.4rem;  
 }  
 .inscription a
 {
@@ -72,17 +66,13 @@ header img
 .inscription 
 {
     grid-area: inscription;
-    margin: 1.6rem 0 0 2.9rem;
-}
-.menu ul a:active 
-{
-    color: #0065fc;
-    border-top: 0.2rem solid #0065fc;
+    margin: 4.6rem 0 0 2.9rem;
 }
 .titre-principal
 {
     grid-area: titre-principal;
     line-height: 1.3rem;
+    padding: 1rem 0 0.7rem 0;
 }
 /* fin menu nav */
 /* FIN HEADER */
@@ -96,16 +86,19 @@ main
     display: flex;
 }
 .recherche button 
-{ 
-    font-family:inherit;
-    font-weight: bold;
-    background-color: #0065fc;
-    color: white;
-    font-size: 1.8rem;
+{     
+    background-color: #0065fc;   
     padding: 1.5rem;
     border: 0;
     border-radius:0 1.5rem 1.5rem 0;
     margin-left: -0.2rem;
+}
+.texte-recherche 
+{
+    font-family:inherit;
+    font-weight: bold;
+    color: white;
+    font-size: 1.8rem;
 }
 .recherche input 
 {
@@ -115,7 +108,7 @@ main
     font-weight:bold;
     padding-left: 1.5rem;   
 }
-.recherche i 
+.fa-map-marker-alt
 {
     padding: 1.8rem;
     background-color: #f2f2f2;
@@ -131,18 +124,18 @@ main
     align-items: center;
     border:  0.2rem solid #dfdfdf;
     border-radius:5rem;
-    margin:0 0 1.5rem 2rem;   
+    margin:1rem 0 1rem 2.5rem;  
 }
 .titre-filtre
 {
     display: inline-flex;
-    margin: 1.2rem;
+    margin:1.2rem 0.4rem 1.2rem 1.2rem;
 }
 .texte-filtre
 {
     font-size: 1.8rem;
     font-weight: bold;
-    margin:0 2rem 0 1.2rem;   
+    margin:0 1.8rem 0 1.1rem; 
 }
 .icone-filtre
 {
@@ -186,7 +179,7 @@ main
 }
 /* FIN INFO */
 
-.section-hebergement-activite
+.section-hebergement-populaire
 {
     display: flex;
     margin-bottom: 6rem;
@@ -214,11 +207,10 @@ main
     height: 18.4rem;
     background-color: white;
     margin:1.5rem 1rem;
-    padding: 0.6rem;
-    padding-bottom: 1rem;
+    padding: 0.5rem 0.5rem 1rem 0.5rem;    
     border-radius: 2.5rem;
     line-height: 0.6rem;
-    box-shadow: 0.2rem 0.2rem 2rem lightgray;
+    box-shadow: 0.2rem 0.3rem 1.2rem #e0dede;
 }
 .hebergement a
 {
@@ -261,11 +253,9 @@ main
     flex-direction: column;
     align-items: center;
     background-color:#f2f2f2;
-    width: 27.7%;
-    min-width: 37rem;
+    width: clamp(37rem, 27.7%, 60rem);
     padding: 2.4rem 2.6rem 0 2.3rem;
     border-radius: 2rem ;
-    /* margin-left: 4.7rem; */
 }
 .titre-populaire
 {
@@ -288,7 +278,7 @@ main
     margin: 1.6rem;
     padding: 0.5rem;
     border-radius: 2rem;
-    box-shadow: 0.2rem 0.2rem 2rem lightgray;    
+    box-shadow: 0.2rem 0.3rem 1.2rem #e0dede;  
 }
 .image-populaire 
 {
@@ -302,7 +292,7 @@ main
 { 
     width: 108%; 
     height: 106%; 
-    margin-left:0.5rem 0 0 -0.6rem;
+    margin-left:-0.6rem;
     object-fit:cover;    
 }
 .texte-populaire 
@@ -358,9 +348,9 @@ main
 {
     background-color: white;
     padding: 0.4rem 0 0.1rem 1.8rem;
-    transform: translate(0, -4.1rem);
+    transform: translate(0, -4rem);
     border-radius: 0 0 2rem 2rem; 
-    box-shadow: 0.2rem 0.4rem 0.8rem rgb(235, 233, 233);
+    box-shadow: 0.2rem 0.5rem 0.8rem rgb(235, 233, 233);
 }
 .img-1, .img-4 
 {
@@ -403,4 +393,250 @@ footer p
 }
 /* FIN FOOTER */
 
+
+/* VERSION MOBILE */
+@media screen and (max-width: 650px) 
+{   
+     /*HEADER mobile*/
+    header 
+    {
+        display: grid;
+        grid-template-areas:
+        "img inscription"
+        "menu menu"
+        "titre-principal titre-principal";
+        grid-template-columns: 50% 50%;
+        margin: 0;
+    }
+    header img 
+    {
+        padding: 2.4rem 0 2.8rem 2rem;
+    }
+    .inscription 
+    {
+        padding-left:7rem;
+        margin-top: 4rem;
+    }
+    .menu a 
+    {
+       flex-basis: 50%;
+       text-align: center;
+       padding:0 0 1.4rem 0;
+       border-bottom: 0.3rem solid #f2f2f2;
+    }
+    .menu a:active 
+    {
+        border-bottom: 0.3rem solid #0065fc;
+    }
+    .titre-principal
+    {
+        padding: 2rem 2rem;
+    }
+    h1 
+    {
+        line-height: 2.5rem;
+    }
+    /* MAIN mobile*/
+  
+    main 
+    {
+        margin: 0 2rem;
+    }
+    .recherche button 
+    {
+        border-radius:1.5rem;
+        padding: 0 1.7rem;
+        margin-left: -1rem;   
+    }
+    .fa-search
+    {
+        display: block;
+        color: white;
+        font-size: 1.7rem;
+    }
+    .texte-recherche 
+    {
+        display: none;
+    }
+    .filtre 
+    {
+        margin:0.6rem 0.4rem;
+    }
+    .titre-filtre
+    {
+        width: 100%;
+        margin: 1.1rem 0;
+    }
+    .texte-filtre
+    {
+        font-size: 1.6rem;
+        margin:0 1.5rem 0 1.1rem;
+    }
+    .info 
+    {
+        align-items: baseline;
+    }
+    .info i 
+    {
+        padding: 0 0.3rem;
+    }
+    .section-hebergement-populaire 
+    {
+        flex-wrap:wrap-reverse ;
+        justify-content: center;
+        margin-bottom: 5rem;
+    }
+    .populaire 
+    {
+        padding-bottom: 3rem;
+        border-radius: 0;
+        width: 37.5rem;
+        box-sizing: border-box;
+    }
+    .titre-populaire 
+    {
+       margin-bottom: 0.9rem; 
+    }
+    .populaire article 
+    {
+        margin: 0.5rem;
+    }
+    .hebergement 
+    {
+        background-color: white;
+        margin: 0;
+        padding: 1.7rem 0 0 0;
+        min-width: 37.5rem;
+    }
+    .hebergement article 
+    {
+        min-width: 32.5rem;
+        margin: 1rem 0 0.2rem 0;
+        box-shadow: 0.2rem 0.5rem 0.8rem rgb(235, 233, 233)
+    }
+    .Afficher
+    {
+        padding: 3rem 0 0 2.7rem;
+        margin: 0;
+        font-size: 1.8rem;
+    }
+    .Activites 
+    {
+        justify-content: center;
+    }
+    #Activites 
+    {
+        margin: 0 0 5rem 0;
+    }
+    .Activites img 
+    {
+        width: 33.5rem;
+        height: 19rem;
+    }
+    .img-2, .img-5
+    {
+        margin-bottom: -1.9rem;
+    }             
+    .ta
+    {
+        margin-bottom: -1.9rem;
+    }
+    footer 
+    {
+        flex-direction: column;
+        margin-top: 1rem;
+        padding-left: 3rem;
+        width: 100%;
+        box-sizing: border-box;
+    }
+    footer div 
+    {
+        width: 100%;
+        margin-bottom: 1rem;
+    }
+    footer h3 
+    {
+        margin: 2rem 0 ;
+        font-size: 1.8rem;
+    }
+    .assistance 
+    {
+        margin:1.3rem 0 0 0;
+    }
+}
+
+/* VERSION TABLETTE */
+@media screen and (min-width:651px) and (max-width: 1120px)
+{
+    .filtre 
+    {
+        width: 14.8rem;
+        height: 3.8rem;
+        margin-left: 1rem;   
+    }
+    .titre-filtre 
+    {
+        display: block;
+    }
+    .texte-filtre
+    {
+        font-size: 1.6rem;
+    }
+    .icone-filtre 
+    {
+        min-width: 4rem;
+        max-width: 4rem;
+        height: 4rem;
+    }
+    .section-hebergement-populaire 
+    {
+        flex-wrap:wrap-reverse ;
+        justify-content: center;
+        margin-bottom: 5rem;
+    }    
+    .populaire 
+    {
+        width: 100%;
+        padding-bottom: 2rem;
+        margin-bottom: 2rem;
+    }
+    .populaire article 
+    {
+        width: 80%;
+    }
+    .image-populaire 
+    {
+        width: 50%;
+    }
+    .hebergement 
+    {
+        width: 100%;
+        margin-right: 0;
+    }
+    .Activites 
+    {
+        justify-content: space-around;
+    }       
+    footer div 
+    {
+        margin-right: 1rem;
+    }
+}
+@media screen and (min-width:651px) 
+{
+    .fa-search 
+    {
+        visibility: hidden;
+    }
+    .menu a:active
+    {
+        color: #0065fc;
+        border-top: 0.2rem solid #0065fc;
+    }
+    .menu a:hover
+    {
+        color: #0065fc;
+        border-top: 0.2rem solid #0065fc;
+    }   
+}
 
