--- a/style.css
+++ b/style.css
@@ -510,8 +510,8 @@ footer p
     .populaire 
     {
         padding-bottom: 3rem;
-        border-radius: 0;
-        width: 37.5rem;
+        border-radius: 1rem;
+        width: 50rem;
         box-sizing: border-box;
     }
     .titre-populaire 
@@ -547,7 +547,8 @@ footer p
     }
     #Activites 
     {
-        margin: 0 0 2.9rem 0;
+        width: 32rem;
+        margin: 0 auto 2.9rem auto;
     }
     .Activites img 
     {
@@ -633,6 +634,10 @@ footer p
     {
         width: 100%;
         margin-right: 0;
+    }
+    #Activites 
+    {
+        margin-left: 4rem;
     }
     .Activites 
     {
